// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package dpospb;

message PeriodContext {
    repeated Period period = 1;
    repeated Period next_period = 2;
}

message Period {
    bytes addr = 1;
    string peer_id = 2;
}


message candidateContext {
    int32 height = 1;
    repeated Candidate candidates = 2;
}


message Candidate {
    bytes addr = 1;
    int64 votes = 2;
    string peer = 3;
}
